tests/ui/lint/snapshots/redundant_closure_multi_param.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Redundant closure
   ╭─[test.lis:6:22]
 5 │   let xs = [1, 2, 3]
 6 │   let _ = xs.fold(0, |acc, x| add(acc, x))
   ·                      ──────────┬─────────
   ·                                ╰── can be simpler
 7 │ }
   ╰────
  help: Replace this closure with `add` · code: [lint.redundant_closure]
