tests/ui/lint/snapshots/redundant_closure_single_param.snap
---
source: tests/ui/lint/mod.rs
---
  [warning] Redundant closure
   ╭─[test.lis:6:18]
 5 │   let xs = [1, 2, 3]
 6 │   let _ = xs.map(|x| double(x))
   ·                  ──────┬──────
   ·                        ╰── can be simpler
 7 │ }
   ╰────
  help: Replace this closure with `double` · code: [lint.redundant_closure]
