tests/ui/lint/snapshots/redundant_comparison_float_operand_integer_literals.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant comparison
   ╭─[test.lis:4:11]
 3 │   let f: float64 = 1.0
 4 │   let _ = f < 5 || f < 10
   ·           ──┬──
   ·             ╰── already implied by the other comparison
 5 │ }
   ╰────
  help: Drop this comparison, since the expression is equivalent to the other side alone · code: [lint.redundant_comparison]
