tests/ui/lint/snapshots/redundant_comparison_greater_than.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant comparison
   ╭─[test.lis:4:11]
 3 │   let x = 5;
 4 │   let _ = x > 5 || x > 3
   ·           ──┬──
   ·             ╰── already implied by the other comparison
 5 │ }
   ╰────
  help: Drop this comparison, since the expression is equivalent to the other side alone · code: [lint.redundant_comparison]
