tests/ui/lint/snapshots/redundant_else_chain.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `else`
   ╭─[test.lis:6:5]
 5 │     return 0
 6 │   } else if d {
   ·     ──┬─
   ·       ╰── unnecessary
 7 │     count += 1
   ╰────
  help: The `if` branch always exits, so the `else` only adds nesting. Drop `else` and move its body to follow the `if` · code: [lint.redundant_else]
