tests/ui/lint/snapshots/redundant_else_continue.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant `else`
   ╭─[test.lis:7:7]
 6 │       continue
 7 │     } else {
   ·       ──┬─
   ·         ╰── unnecessary
 8 │       total += x
   ╰────
  help: The `if` branch always exits, so the `else` only adds nesting. Drop `else` and move its body to follow the `if` · code: [lint.redundant_else]
