tests/ui/lint/snapshots/redundant_field_names_enum_variant.snap
---
source: tests/ui/lint/mod.rs
---
  [info] Redundant field name
   ╭─[test.lis:8:17]
 7 │ fn build(x: int) -> Action {
 8 │   Action.Move { x: x, y: 0 }
   ·                 ──┬─
   ·                   ╰── can be simpler
 9 │ }
   ╰────
  help: Replace `x: x` with `x` · code: [lint.redundant_field_names]
